# auth_project

./: .env  .gitignore  .pre-commit-config.yaml  Cargo.toml  Notes.md  Notes_deployment.md  README.md
doc-rfc/: v0.0.1.md
doc-sql/: init.sql
doc/sql/: init.sql  insert.sql
migrations/: 20221115060359_user.down.sql  20221115060359_user.up.sql
page-auth/: Cargo.toml
page-auth/src/: error.rs  handler.rs  lib.rs  structs.rs
page-auth/templates/: add.html  index.html  login.html
page-management/: .gitignore  Cargo.toml
page-management/examples/: dev_auth_server.rs  dev_claims.rs  dev_page_server.rs  dev_static_file.rs  dev_user_connect.rs  toy_server.rs
page-management/src/: error.rs  extensions.rs  forms.rs  handlers.rs  lib.rs  middleware.rs  router.rs  views.rs
page-management/template/: dashboard.html  sign_in.html
page-management/template/dashboard/: base.html  msg.index  toolbar.html  user_add.html  user_demonstration.html  user_edit.html  user_index.html
page-management/templates/: dashboard.html  login.html
svc-auth/: Cargo.toml
svc-users/: Cargo.toml
svc-users/examples/: dev_new_interface.rs  dev_svc_users_connect.rs  dev_test_db.rs
svc-users/src/: .traits 2.rs.icloud  db_pool.rs  error.rs  lib.rs  service.rs  traits.rs
util-auth/: Cargo.toml
util-auth/src/: claims.rs  error.rs  lib.rs
util-config/: Cargo.toml
util-pb/: Cargo.toml  build.rs  user.proto
util-pb/proto/: user.proto
util-pb/src/: lib.rs
util-pb/src/pb/: mod.rs  user.rs
