[package]
name = "page-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.8" }
axum = { version = "0.5", features = ["headers"] }

prost = "0.11"
prost-types = "0.11"

serde = { version = "1", features = ["derive"] }
tera = "1"
chrono = "0.4"

thiserror = "1"
util-auth = { path = "../util-auth" }
util-pb = { path = "../util-pb" }

# TODO Remove this crate later
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls"] }
