[package]
name = "page-management"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5", features = ["headers"] }
axum-macros = "0.2.3"
tonic = "0.8.2"
tokio = { version = "1.21", features = ["full"] }
tower-http = { version = "0.3", features = ["trace", "fs"] }

serde = { version = "1", features = ["derive"] }
dotenv = "0.15"

tera = "1"
thiserror = "1"

tracing = "0.1"
tracing-subscriber = "0.3"

util-pb = { path = "../util-pb" }
util-auth = { path = "../util-auth" }
svc-users = { path = "../svc-users" }
