[package]
name = "util-pb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.11.2"
prost = "0.11.0"
prost-types = "0.11.1"
serde = { version = "1.0.147", features = ["derive"] }
tonic = { version = "0.8.2", features = ["gzip"] }
sqlx = {version = "0.6", features = ["postgres", "runtime-tokio-rustls"]}

[build-dependencies]
proto-builder-trait = "0.5.0"
tonic-build = "0.8.2"
